unpackaged/objects/KOL_Contract__c.object
<CustomObject>
  <description>This object is used to manage Speaker/KOL Contracts. The standard Contract module is NOT used, due to security.</description>
  <fields>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use this field only when the Contract should be linked to a specific account instead of a Contact.</description>
    <inlineHelpText>Use this field only when the Contract should be linked to a specific account instead of a Contact.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>KOL Contracts</relationshipLabel>
    <relationshipName>KOL_Contracts</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Advertorials_Testimonials__c</fullName>
    <label>Advertorials/Testimonials</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Case_Series_Remaining__c</fullName>
    <formula>IF(Case_Series__c -Delivered_Case_Series__c&lt;0,0,Case_Series__c -Delivered_Case_Series__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Case Series Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Case_Series__c</fullName>
    <description>Number of Cases to deliver on agreement/contract</description>
    <inlineHelpText>Number of Cases to deliver on agreement/contract</inlineHelpText>
    <label># Case Series Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Clinic_visit__c</fullName>
    <label># Clinic visits Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Clinical_Pictures_Videos_Remaining__c</fullName>
    <formula>IF(Clinical_pictures_or_video__c -Delivered_Clinical_Picture_or_Video__c&lt;0,0,Clinical_pictures_or_video__c -Delivered_Clinical_Picture_or_Video__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Clinical Pictures/Videos Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Clinical_pictures_or_video__c</fullName>
    <description>Number to deliver on agreement/contract</description>
    <inlineHelpText>Number to deliver on agreement/contract</inlineHelpText>
    <label># Clinical Pictures/Videos Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Clinical_testing_of_products__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill in checkbox if the contract includes Clinical testing of products</description>
    <inlineHelpText>Deliverable for clinical testing of products</inlineHelpText>
    <label>Clinical testing of products</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Confidentiality__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill in checkbox if the contract includes Confidentiality</description>
    <inlineHelpText>Deliverables on agreement/contract</inlineHelpText>
    <label>Confidentiality</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Consulting_per_day__c</fullName>
    <description>Honorarium of consulting per day</description>
    <inlineHelpText>Honorarium of consulting per day</inlineHelpText>
    <label>Consulting per day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Consulting_per_half_day__c</fullName>
    <description>Honorarium of consulting per half day</description>
    <inlineHelpText>Honorarium of consulting per half day</inlineHelpText>
    <label>Consulting per half day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Consulting_per_hour__c</fullName>
    <description>Honorarium of consulting per hour</description>
    <inlineHelpText>Honorarium of consulting per hour</inlineHelpText>
    <label>Consulting per hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Consulting_per_month__c</fullName>
    <description>Honorarium of consulting per month</description>
    <inlineHelpText>Honorarium of consulting per month</inlineHelpText>
    <label>Consulting per month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Use this field only when the Contract should be linked to a specific Contact instead of an Account</description>
    <inlineHelpText>Use this field only when the Contract should be linked to a specific Contact instead of an Account</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Speaker_KOL_Contracts</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Contract_in_Force__c</fullName>
    <description>The day the cooperation has actually begun. Its important to follow since in most cases this date might be different from the date of signature.</description>
    <inlineHelpText>The day the cooperation has actually begun</inlineHelpText>
    <label>Contract in Force</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Cost_Center__c</fullName>
    <description>The Cost Center responsible for the Contract</description>
    <inlineHelpText>The Cost Center responsible for the Contract</inlineHelpText>
    <label>Site GL Department</label>
    <length>25</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Customer_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill in checkbox if the contract includes Customer Support</description>
    <inlineHelpText>Deliverables on agreement/contract</inlineHelpText>
    <label>Customer Support</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Date_of_Signature__c</fullName>
    <description>The date when the contract was signed</description>
    <inlineHelpText>The date when the contract was signed</inlineHelpText>
    <label>Date of Signature</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Delivered_Case_Series__c</fullName>
    <description>The Case series already delivered in relation to the KOL Contract</description>
    <inlineHelpText>The Case series already delivered in relation to the KOL Contract</inlineHelpText>
    <label>Delivered Case Series</label>
    <summarizedField>KOL_Contract_Deliverable__c.Quantity__c</summarizedField>
    <summaryFilterItems>
      <field>KOL_Contract_Deliverable__c.Type__c</field>
      <operation>equals</operation>
      <value>Case Serie</value>
    </summaryFilterItems>
    <summaryForeignKey>KOL_Contract_Deliverable__c.KOL_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Delivered_Clinical_Picture_or_Video__c</fullName>
    <description>The Pictures or Videos delivered in relation to the KOL Contract</description>
    <inlineHelpText>The Pictures or Videos delivered in relation to the KOL Contract</inlineHelpText>
    <label>Delivered Clinical Picture or Video</label>
    <summarizedField>KOL_Contract_Deliverable__c.Quantity__c</summarizedField>
    <summaryFilterItems>
      <field>KOL_Contract_Deliverable__c.Type__c</field>
      <operation>equals</operation>
      <value>Clinical Picture or Video</value>
    </summaryFilterItems>
    <summaryForeignKey>KOL_Contract_Deliverable__c.KOL_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Delivered_Lectures__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Delivered Lectures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Delivered_Lectures_count__c</fullName>
    <label>Delivered Lectures</label>
    <summarizedField>KOL_Contract_Deliverable__c.Quantity__c</summarizedField>
    <summaryFilterItems>
      <field>KOL_Contract_Deliverable__c.Type__c</field>
      <operation>equals</operation>
      <value>Lecture</value>
    </summaryFilterItems>
    <summaryForeignKey>KOL_Contract_Deliverable__c.KOL_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Delivered_Presentation_Materials__c</fullName>
    <description>The Presentation Materials delivered in relation to the KOL Contract</description>
    <inlineHelpText>The Presentation Materials delivered in relation to the KOL Contract</inlineHelpText>
    <label>Delivered Presentation Materials</label>
    <summarizedField>KOL_Contract_Deliverable__c.Quantity__c</summarizedField>
    <summaryFilterItems>
      <field>KOL_Contract_Deliverable__c.Type__c</field>
      <operation>equals</operation>
      <value>Presentation Material</value>
    </summaryFilterItems>
    <summaryForeignKey>KOL_Contract_Deliverable__c.KOL_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Delivered_Pubications__c</fullName>
    <description>The Publications delivered in relation to the KOL Contracts</description>
    <inlineHelpText>The Publications delivered in relation to the KOL Contracts</inlineHelpText>
    <label>Delivered Pubications</label>
    <summarizedField>KOL_Contract_Deliverable__c.Quantity__c</summarizedField>
    <summaryFilterItems>
      <field>KOL_Contract_Deliverable__c.Type__c</field>
      <operation>equals</operation>
      <value>Publication</value>
    </summaryFilterItems>
    <summaryForeignKey>KOL_Contract_Deliverable__c.KOL_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Delivered_Reviews__c</fullName>
    <description>The Reviews delivered in relation to a KOL Contract</description>
    <inlineHelpText>The Publications delivered in relation to the KOL Contracts</inlineHelpText>
    <label>Delivered Reviews</label>
    <summarizedField>KOL_Contract_Deliverable__c.Quantity__c</summarizedField>
    <summaryFilterItems>
      <field>KOL_Contract_Deliverable__c.Type__c</field>
      <operation>equals</operation>
      <value>Review</value>
    </summaryFilterItems>
    <summaryForeignKey>KOL_Contract_Deliverable__c.KOL_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Delivered_Scientific_Folders__c</fullName>
    <description>The Scientific Folders delivered in relation to the KOL Contract</description>
    <inlineHelpText>The Scientific Folders delivered in relation to the KOL Contract</inlineHelpText>
    <label>Delivered Scientific Folders</label>
    <summarizedField>KOL_Contract_Deliverable__c.Quantity__c</summarizedField>
    <summaryFilterItems>
      <field>KOL_Contract_Deliverable__c.Type__c</field>
      <operation>equals</operation>
      <value>Scientific Poster</value>
    </summaryFilterItems>
    <summaryForeignKey>KOL_Contract_Deliverable__c.KOL_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Duration_of_confidentiality_agreement__c</fullName>
    <description>End date to treat all confidential trade secrets with the consultant</description>
    <inlineHelpText>End date to treat all confidential trade secrets with the consultant</inlineHelpText>
    <label>Duration of confidentiality agreement</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Duration_of_enlargement__c</fullName>
    <description>End date - The contract will extend for one year if it is not terminated by either party</description>
    <inlineHelpText>End date - The contract will extend for one year if it is not terminated by either party</inlineHelpText>
    <label>Duration of enlargement</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>End_Date__c</fullName>
    <description>The End Date of the Contract</description>
    <inlineHelpText>The End Date of the Contract</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Estimated_Contract_Value_per_year__c</fullName>
    <description>The Estimated value of the Contract Value per year</description>
    <inlineHelpText>The Estimated value of the Contract Value per year</inlineHelpText>
    <label>Estimated Contract Value per year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Exclusivity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill in checkbox if the contract includes Exclusivity</description>
    <inlineHelpText>(Noncopetition clause) Deliverables on agreement/contract</inlineHelpText>
    <label>Exclusivity</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Expert_Tier_When_Created__c</fullName>
    <description>Used to track the Tier of the Expert when contract is created to see if it changes over time</description>
    <inlineHelpText>Shows the Tier of the Expert when the contract was created. To be able to see if the Tier has changed</inlineHelpText>
    <label>Expert Tier</label>
    <length>30</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Expert_Tier_current__c</fullName>
    <formula>Expert__r.Tier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expert Tier (current)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Expert__c</fullName>
    <label>KOL information</label>
    <referenceTo>Expert__c</referenceTo>
    <relationshipLabel>KOL Contracts</relationshipLabel>
    <relationshipName>Expert_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>External_contract_ID__c</fullName>
    <label>External contract ID</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Specialty Group 1</fullName>
        </value>
        <value>
          <fullName>Specialty Group 2</fullName>
        </value>
        <value>
          <fullName>Specialty Group 3</fullName>
        </value>
        <value>
          <fullName>Specialty Group 4</fullName>
        </value>
        <value>
          <fullName>Support Group 1</fullName>
        </value>
        <value>
          <fullName>Support Group 2</fullName>
        </value>
        <value>
          <fullName>Support Group 3</fullName>
        </value>
        <value>
          <fullName>Support Group 4</fullName>
        </value>
        <value>
          <fullName>No Profession Added</fullName>
        </value>
        <value>
          <fullName>Non-Healthcare Provider</fullName>
        </value>
        <value>
          <fullName>Dental Specialties – Group 1</fullName>
          <isActive>false</isActive>
          <label>Dental Specialties – Group 1</label>
        </value>
        <value>
          <fullName>Dental Specialties – Group 2</fullName>
          <isActive>false</isActive>
          <label>Dental Specialties – Group 2</label>
        </value>
        <value>
          <fullName>Dental Specialties – Group 3</fullName>
          <isActive>false</isActive>
          <label>Dental Specialties – Group 3</label>
        </value>
        <value>
          <fullName>Dental Specialties – Group 4</fullName>
          <isActive>false</isActive>
          <label>Dental Specialties – Group 4</label>
        </value>
        <value>
          <fullName>Dental Support – Group 1</fullName>
          <isActive>false</isActive>
          <label>Dental Support – Group 1</label>
        </value>
        <value>
          <fullName>Dental Support – Group 2</fullName>
          <isActive>false</isActive>
          <label>Dental Support – Group 2</label>
        </value>
        <value>
          <fullName>Dental Support – Group 3</fullName>
          <isActive>false</isActive>
          <label>Dental Support – Group 3</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Hospitations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill in checkbox if the contract includes Hospitations</description>
    <inlineHelpText>Deliverables on agreement/contract</inlineHelpText>
    <label>Hospitations</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Hourly_Rate__c</fullName>
    <label>Hourly Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Hourly_rate_max__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Max allowed hourly rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Hourly_rate_min__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Minimum allowed hourly rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Hours_of_work_to_be_compensated__c</fullName>
    <label>Hours of work to be compensated</label>
    <summarizedField>KOL_Contract_Deliverable__c.Work_hours__c</summarizedField>
    <summaryForeignKey>KOL_Contract_Deliverable__c.KOL_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Hyperion_Business_Function__c</fullName>
    <label>Hyperion Business Function</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>025 Royalties</fullName>
        </value>
        <value>
          <fullName>051 Marketing</fullName>
        </value>
        <value>
          <fullName>052 Sales</fullName>
        </value>
        <value>
          <fullName>054 Clinical Education</fullName>
        </value>
        <value>
          <fullName>055 Clinical Affairs</fullName>
        </value>
        <value>
          <fullName>066 Legal</fullName>
        </value>
        <value>
          <fullName>069 Regulatory</fullName>
        </value>
        <value>
          <fullName>070 R&amp;D</fullName>
        </value>
        <value>
          <fullName>071 Clinical Trials</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Include_Case_Series__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill in checkbox if the contract includes Case Series</description>
    <inlineHelpText>Fill in checkbox if the contract includes Case Series</inlineHelpText>
    <label>Include Case Series</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Include_Clinic_visit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill in checkbox if the contract includes Clinic visit</description>
    <inlineHelpText>Fill in checkbox if the contract includes Clinic visit</inlineHelpText>
    <label>Include Clinic visit</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Include_Clinical_Pictures_or_video__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill in checkbox if the contract includes Clinical Picture or video</description>
    <inlineHelpText>Fill in checkbox if the contract includes Clinical Picture or video</inlineHelpText>
    <label>Include Clinical Pictures or video</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Include_Lectures__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill in checkbox if the contract includes lecturers</description>
    <inlineHelpText>Fill in checkbox if the contract includes lecturers</inlineHelpText>
    <label>Include Lectures</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Include_Presentation_material__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill in checkbox if the contract includes Presentation material</description>
    <inlineHelpText>Fill in checkbox if the contract includes Presentation material</inlineHelpText>
    <label>Include Presentation material</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Include_Publication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill in checkbox if the contract includes Publication</description>
    <inlineHelpText>Fill in checkbox if the contract includes Publication</inlineHelpText>
    <label>Include Publication</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Include_Scientific_posters__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill in checkbox if the contract includes Scientific posters</description>
    <inlineHelpText>Fill in checkbox if the contract includes Scientific posters</inlineHelpText>
    <label>Include Scientific posters</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>International_Lecturing_full_day__c</fullName>
    <description>International honorarium full day</description>
    <inlineHelpText>International honorarium full day</inlineHelpText>
    <label>International Lecturing full day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>International_Lecturing_half_day__c</fullName>
    <description>International Lecturing half day</description>
    <inlineHelpText>International Lecturing half day</inlineHelpText>
    <label>International Lecturing half day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>International_Lecturing_per_hour__c</fullName>
    <description>International Lecturing per hour</description>
    <inlineHelpText>International Lecturing per hour</inlineHelpText>
    <label>International Lecturing per hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>International_Lecturing_per_lecture__c</fullName>
    <description>International Lecturing per lecture</description>
    <inlineHelpText>International Lecturing per lecture</inlineHelpText>
    <label>International Lecturing per lecture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>KOL_Contract_Name__c</fullName>
    <description>The Concatenation of Account/Contact and KOL Contract number. used to find the right KOL Contract</description>
    <formula>Account__r.Name   &amp;   Contact__r.Full_Name__c   &amp; " "  &amp;  Name</formula>
    <inlineHelpText>The Concatenation of Account/Contact and KOL Contract number. used to find the right KOL Contract</inlineHelpText>
    <label>KOL Contract</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>KOL_Contract__c</fullName>
    <description>This is the number of the KOL Contracts. Used to populate KOL Contract Name</description>
    <displayFormat>KOL Contract # - {0}</displayFormat>
    <inlineHelpText>This is the number of the KOL Contracts. Used to populate KOL Contract Name</inlineHelpText>
    <label>KOL Contract #</label>
    <type>AutoNumber</type>
  </fields>
  <fields>
    <fullName>Lectures_Remaining__c</fullName>
    <formula>IF( Lectures__c - Delivered_Lectures_count__c &lt;0,0,Lectures__c - Delivered_Lectures_count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Lectures Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Lectures__c</fullName>
    <description>Number of Lectures to deliver on agreement/contract</description>
    <inlineHelpText>Number of Lectures to deliver on agreement/contract</inlineHelpText>
    <label># Lectures Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Lecturing_per_preparation_hour__c</fullName>
    <description>Honorarium of lecturing per preparation hour</description>
    <inlineHelpText>Honorarium of lecturing per preparation hour</inlineHelpText>
    <label>Lecturing per preparation hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>License_Country__c</fullName>
    <label>License Country</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>AD</fullName>
        </value>
        <value>
          <fullName>AE</fullName>
        </value>
        <value>
          <fullName>AF</fullName>
        </value>
        <value>
          <fullName>AG</fullName>
        </value>
        <value>
          <fullName>AI</fullName>
        </value>
        <value>
          <fullName>AL</fullName>
        </value>
        <value>
          <fullName>AM</fullName>
        </value>
        <value>
          <fullName>AN</fullName>
        </value>
        <value>
          <fullName>AO</fullName>
        </value>
        <value>
          <fullName>AQ</fullName>
        </value>
        <value>
          <fullName>AR</fullName>
        </value>
        <value>
          <fullName>AS</fullName>
        </value>
        <value>
          <fullName>AT</fullName>
        </value>
        <value>
          <fullName>AU</fullName>
        </value>
        <value>
          <fullName>AW</fullName>
        </value>
        <value>
          <fullName>AX</fullName>
        </value>
        <value>
          <fullName>AZ</fullName>
        </value>
        <value>
          <fullName>BA</fullName>
        </value>
        <value>
          <fullName>BB</fullName>
        </value>
        <value>
          <fullName>BD</fullName>
        </value>
        <value>
          <fullName>BE</fullName>
        </value>
        <value>
          <fullName>BF</fullName>
        </value>
        <value>
          <fullName>BG</fullName>
        </value>
        <value>
          <fullName>BH</fullName>
        </value>
        <value>
          <fullName>BI</fullName>
        </value>
        <value>
          <fullName>BJ</fullName>
        </value>
        <value>
          <fullName>BL</fullName>
        </value>
        <value>
          <fullName>BM</fullName>
        </value>
        <value>
          <fullName>BN</fullName>
        </value>
        <value>
          <fullName>BO</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Maintaining_Implant_data_base__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill in checkbox if the contract includes Maintaining Implant data base</description>
    <inlineHelpText>Deliverables on agreement/contract</inlineHelpText>
    <label>Maintaining Implant data base</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>National_Lecturing_full_day__c</fullName>
    <description>National - Honorarium of lecturing full day</description>
    <inlineHelpText>National - Honorarium of lecturing full day</inlineHelpText>
    <label>National Lecturing full day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>National_Lecturing_half_day__c</fullName>
    <description>National Honorarium of lecturing half day</description>
    <inlineHelpText>National Honorarium of lecturing half day</inlineHelpText>
    <label>National Lecturing half day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>National_Lecturing_per_hour__c</fullName>
    <description>National Honorarium of lecturing per hour</description>
    <inlineHelpText>National Honorarium of lecturing per hour</inlineHelpText>
    <label>National Lecturing per hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>National_Lecturing_per_lecture__c</fullName>
    <description>National Honorarium of lecturing per lecture</description>
    <inlineHelpText>National Honorarium of lecturing per lecture</inlineHelpText>
    <label>National Lecturing per lecture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Notice_of_termination_month_before_end__c</fullName>
    <description>The number of month before end date when the reminder for the expiration of the contract should be sent out</description>
    <inlineHelpText>The number of month before end date when the reminder for the expiration of the contract should be sent out</inlineHelpText>
    <label>Notice of termination(#month before end)</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>1 month</fullName>
          <default>true</default>
          <label>1 month</label>
        </value>
        <value>
          <fullName>2 months</fullName>
        </value>
        <value>
          <fullName>3 months</fullName>
        </value>
        <value>
          <fullName>4 months</fullName>
        </value>
        <value>
          <fullName>5 months</fullName>
        </value>
        <value>
          <fullName>6 months</fullName>
        </value>
        <value>
          <fullName>None</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Payment_frequency__c</fullName>
    <label>Payment frequency</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Monthly</fullName>
        </value>
        <value>
          <fullName>Quarterly</fullName>
        </value>
        <value>
          <fullName>Yearly</fullName>
        </value>
        <value>
          <fullName>Per Event</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Per_Publication__c</fullName>
    <description>Honorarium for one publication</description>
    <inlineHelpText>Honorarium for one publication</inlineHelpText>
    <label>Per Publication</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Plan_compensation__c</fullName>
    <formula>Planning_hours_to_be_compensated__c *  Hourly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planning compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Planning_hours_to_be_compensated__c</fullName>
    <label>Planning hours to be compensated</label>
    <summarizedField>KOL_Contract_Deliverable__c.Planning_hours__c</summarizedField>
    <summaryForeignKey>KOL_Contract_Deliverable__c.KOL_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Presentation_Materials_Remaining__c</fullName>
    <formula>IF(Presentation_material__c-Delivered_Presentation_Materials__c&lt;0,0,Presentation_material__c-Delivered_Presentation_Materials__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Presentation Materials Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Presentation_material__c</fullName>
    <description>Number to deliver on agreement/contract</description>
    <inlineHelpText>Number to deliver on agreement/contract</inlineHelpText>
    <label># Presentation materials Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Publication__c</fullName>
    <description>Deliverables on agreement/contract</description>
    <inlineHelpText>Deliverables on agreement/contract</inlineHelpText>
    <label># Publications Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Publication_in_Pubmed__c</fullName>
    <description>Honorarium for publication in Pubmed</description>
    <inlineHelpText>Honorarium for publication in Pubmed</inlineHelpText>
    <label>Publication in Pubmed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Publication_per_working_days__c</fullName>
    <description>Honorarium for publication per working days</description>
    <inlineHelpText>Honorarium for publication per working days</inlineHelpText>
    <label>Publication per working days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Publications_Remaining__c</fullName>
    <formula>IF(Publication__c-Delivered_Pubications__c&lt;0, 0, Publication__c-Delivered_Pubications__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Publications Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Read_the_Contract_Specific_infomraiton__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This contract includes specific information</description>
    <inlineHelpText>This contract includes specific information</inlineHelpText>
    <label>Read the Contract - Specific information</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill in checkbox if the contract includes Reporting</description>
    <inlineHelpText>Deliverables on agreement/contract</inlineHelpText>
    <label>Reporting</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Reviews_Remaining__c</fullName>
    <formula>IF(Reviews__c-Delivered_Reviews__c&lt;0,0, Reviews__c-Delivered_Reviews__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Reviews Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Reviews__c</fullName>
    <description>Number to deliver on agreement/contract</description>
    <inlineHelpText>Number to deliver on agreement/contract</inlineHelpText>
    <label># Reviews Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
</CustomObject>